# Apollo-Language

./: .gitignore  COMO_EXECUTAR_PROGRAMA.md  COMO_RODAR_TESTES.md  COMPILAR_EXEMPLOS.md  README.md  VALIDACAO_REQUISITOS.md  afds.md  apollo_compiler.py  diario_reflexivo.md  documentacao_erros.md  entrega.md  entrega2.md  implementacaoAFDS.py
codegen/: __init__.py  llvm_generator.py
docs/: COMO_EXECUTAR_SIMPLIFICADO.md  EXPLICACAO_CODIGO.md  MANUAL_INSTALACAO.md  MANUAL_UTILIZACAO.md  gramatica_apollo.md
docs/diagramas/: afd_final.md
docs/especificacoes/: especificacao_formal.md
docs/historicos/: COMPILADOR_COMPLETO.md  README_COMPILADOR.md  diario_reflexivo.md  documentacao_codigo.md  resumo_implementacoes.md  revisao_completa.md
examples/: exemplo_completo.apl  exemplo_completo.ll  exemplo_simples.apl  exemplo_simples.ll  out_completo.ll
lexer/: README.md  afn_to_afd.py  apollo_lexer.py  executar_analisador.py  exemplo.apl  lexer.py  teste_completo.py  teste_lexer.py  teste_simples.py
lexer/ll1-parser-python/: README.md  pyproject.toml  requirements.txt
lexer/ll1-parser-python/docs/diagramas/: afd_final.md
lexer/ll1-parser-python/src/: first_follow.py  grammar.py  lexer.py  main.py  parse_table.py  parser.py
lexer/ll1-parser-python/tests/: test_grammar.py  test_parser.py
parser/: __init__.py  ast.py  parser.py
scripts/: setup.sh
semantic/: __init__.py  semantic_analyzer.py
tests/: test_codegen_integration.py  test_lexer_pytest.py
tests/lexer/: teste_completo.py  teste_lexer.py  teste_simples.py
tests/parser/: test_block.py
