[tool.poetry]
name = "ll1-parser-python"
version = "0.1.0"
description = "A predictive parser for simple mathematical expressions using LL(1) parsing."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"